[package]
name = "semtext"
version = "0.1.0"
authors = ["Douglas Lau <doug.p.lau@gmail.com>"]
description = "Terminal UI Library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/semtext"
homepage = "https://github.com/DougLau/semtext"
repository = "https://github.com/DougLau/semtext"
readme = "README.md"
keywords = ["tui", "terminal", "ui"]
edition = "2018"

[dependencies]
textwrap = "0.13"
unicode-width = "0.1"
futures-core = "0.3"

[dependencies.crossterm]
version = "0.19"
features = ["event-stream"]

[dev-dependencies]
pasts = "0.6"
futures = "0.3"
