[package]
name = "semtext"
version = "0.1.0"
description = "Terminal UI Library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/semtext"
homepage = "https://github.com/DougLau/semtext"
repository = "https://github.com/DougLau/semtext"
readme = "README.md"
keywords = ["tui", "terminal", "ui"]
edition = "2021"

[dependencies]
textwrap = "0.15"
unicode-width = "0.1"
futures-core = "0.3"

[dependencies.crossterm]
version = "0.23"
features = ["event-stream"]

[dev-dependencies]
futures = "0.3"
